# OverPassAPI

./: CLAUDE.md  README.md  pyproject.toml
src/: __init__.py  config.py
src/clients/: __init__.py  overpass_client.py
src/models/: __init__.py  bounding_box.py  polygon.py
src/repositories/: __init__.py  base.py  polygon_repository.py
src/services/: __init__.py  polygon_service.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config.py
tests/unit/clients/: __init__.py  test_overpass_client.py
tests/unit/models/: test_bounding_box.py  test_polygon.py  test_polygon_type.py
tests/unit/repositories/: test_base_repository.py  test_polygon_repository.py
tests/unit/services/: test_polygon_service.py
