[project]
name = "overpassapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
]
